bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:2: error: not found: value &&
  if (negative) && ((a<0) && (b<0)) {
                ^PosNeg:5: error: not found: value ||
  if ((a>0) && (b<0)) || ((b>0) && (a<0)) {
                      ^